# pa-applet

./: configure.ac
src/: Makefile.am  audio_status.c  audio_status.h  key_grabber.c  key_grabber.h  main.c  notifications.c  popup_menu.c  pulse_glue.c  pulse_glue.h  volume_scale.c
